# Atom-Neural-RL

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DAY_ONE.md  DESIGN.md
scripts/: check.sh
src/atom_neural_rl/: __init__.py  bank.py  capture.py  channel.py  cli.py  cma.py  execution.py  field.py  fixedpoint.py  gates.py  golden.py  golden_executor.py  gym.py  impairments.py  operator.py  recovery.py  reward.py  version.py  waveforms.py  zplane.py
tests/: test_bank.py  test_channels.py  test_cma.py  test_execution.py  test_field.py  test_fixedpoint.py  test_gates.py  test_golden.py  test_golden_executor.py  test_gym.py  test_impairments.py  test_integration.py  test_invariance.py  test_operator.py  test_reward.py  test_zplane.py
